--- a/package.json
+++ b/package.json
@@ -13,42 +13,81 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "@babel/preset-react": "^7.22.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
+    "@types/node": "20.4.4",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "axios": "^1.4.0",
+    "eslint": "8.45.0",
+    "eslint-config-next": "13.4.12",
+    "next": "13.4.12",
+    "next-transpile-modules": "^10.0.1",
+    "prettier": "^2.7.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primereact": "^10.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.69.7",
-    "swr": "^2.2.4"
+    "primereact": "^9.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sass": "^1.64.1",
+    "storybook": "^7.6.7",
+    "swr": "^2.0.0",
+    "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.23.3",
+    "@babel/core": "^7.19.3",
+    "@storybook/addon-actions": "^7.6.7",
+    "@storybook/addon-docs": "^7.6.7",
     "@storybook/addon-essentials": "^7.6.7",
     "@storybook/addon-interactions": "^7.6.7",
     "@storybook/addon-links": "^7.6.7",
-    "@storybook/addon-onboarding": "^1.0.10",
-    "@storybook/blocks": "^7.6.7",
+    "@storybook/addon-mdx-gfm": "^7.6.7",
     "@storybook/nextjs": "^7.6.7",
     "@storybook/react": "^7.6.7",
     "@storybook/test": "^7.6.7",
-    "@storybook/testing-library": "^0.2.2",
-    "@storybook/testing-react": "^2.0.1",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "@storybook/testing-library": "0.2.2",
+    "@storybook/testing-react": "^2.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/node": "18.8.0",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "babel-loader": "^8.2.5",
+    "cookies-next": "^2.1.1",
+    "cssnano": "^6.0.1",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.6.15",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "next-transpile-modules": "^10.0.1",
-    "storybook": "^7.6.7",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "husky": "^8.0.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.1.2",
+    "jsonwebtoken": "^9.0.0",
+    "node-mocks-http": "^1.12.2",
+    "nyc": "^15.1.0",
+    "plur": "^5.1.0",
+    "postcss": "^8.4.33",
+    "postcss-cli": "^10.1.0",
+    "postcss-custom-properties": "^13.3.0",
+    "prettier": "^2.7.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.5.0",
+    "react-multi-select-component": "^4.3.4",
+    "react-redux": "^8.0.4",
+    "react-select": "^5.7.2",
+    "react-tiny-popover": "^7.2.4",
+    "sass": "^1.58.0",
+    "storybook-css-modules": "^1.0.8",
+    "swr": "^2.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "4.8.4",
+    "xhr2": "^0.2.1"
   }
 }
