--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "sass": "^1.64.1",
     "storybook": "^7.6.7",
     "swr": "^2.0.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vercel": "^33.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
